<resources>
    <string name="app_name">AndroidDeepNavi</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="camera2">camera2</string>
    <string name="camera">camera</string>
    <string name="please_input_backend_s_url">please input backEnd\'s url</string>
    <string name="media_recorder">media recorder</string>
    <string name="begin">begin</string>
    <string name="empty">空空如也</string>
    <string name="please_input_frequency">please input frequency</string>
    <string name="please_input_sensor_s_rate">please input sensor\'s rate</string>
    <string name="please_input_image_size">please input image size, format: width, height</string>
    <string name="please_input_all_sensor_s_rate">please input all sensor\'s rate</string>
    <string name="train">train</string>
    <string name="please_input_key_point">please input key point</string>
    <string name="please_input_starting_point">please input starting point</string>
    <string name="please_input_ending_point">please input ending point</string>
    <string name="please_input_point_s_x_y_z">please input point\'s x,y,z</string>
    <string name="please_input_point_s_name">please input point\'s name</string>
    <string name="add_point">Add Point</string>
    <string name="select_map_image">select map image</string>
    <string name="upload_map">Upload Map</string>
    <string name="map_mode">map mode</string>
    <string name="audio_mode">audio mode</string>
    <string name="please_input_x">please input x</string>
    <string name="please_input_y">please input y</string>
    <string name="please_input_z">please input z</string>
    <string name="please_input_actual_x">please input actual x</string>
    <string name="please_input_actual_y">please input actual y</string>
    <string name="please_input_actual_z">please input actual z</string>
    <string name="add_edge">Add Edge</string>
    <string name="break_point">break point</string>
    <string name="search">Search</string>
    <string name="please_input_map_s_name">please input map\'s name</string>
    <string name="please_input_bitmap_width">please input bitmap width</string>
    <string name="please_input_bitmap_height">please input bitmap height</string>
    <string name="please_input_bitmap_s_depth">please input bitmap\'s depth</string>
    <string name="please_input_map_s_actual_width">please input map\'s actual width</string>
    <string name="please_input_map_s_actual_height">please input map\'s actual height</string>
    <string name="please_input_map_s_actual_depth">please input map\'s actual depth</string>
    <string name="bitmap_size">bitmap size</string>
    <string name="please_input_origin_point_s_x">please input origin point\'s x</string>
    <string name="please_input_origin_point_s_y">please input origin point\'s y</string>
    <string name="please_input_origin_point_s_z">please input origin point\'s z</string>
    <string name="set_origin_point">set origin point</string>
    <string name="percentage_mode">percentage mode</string>
    <string name="search_map_by_point">search map by point</string>
    <string name="search_map_by_id">search map by id</string>
    <string name="search_map_by_name">search map by name</string>
    <string name="search_path">search path</string>
    <string name="include_points">include points</string>
    <string name="include_edges">include edges</string>
    <string name="please_input_map_id">please input map id</string>
    <string name="please_input_map_name">please input map name</string>
    <string name="consult_map">consult map</string>
    <string name="point_id">point id</string>
    <string name="point_name">point name</string>
    <string name="point_index">point index</string>
    <string name="as_start_point">as start point</string>
    <string name="as_end_point">as end point</string>
    <string name="point_and_location">point and location</string>
    <string name="angle_of_rotation_about_the_x_axis">angle of rotation about the x-axis</string>
    <string name="angle_of_rotation_about_the_y_axis">angle of rotation about the y-axis</string>
    <string name="angle_of_rotation_about_the_z_axis">angle of rotation about the z-axis</string>
    <string name="is_clock_wise">is clock wise</string>
    <string name="please_input_offset_angle">please input offset angle</string>
    <string name="get_config_from_server">get config from server</string>
    <string name="don_t_get_config_from_server">don\'t get config from server</string>
    <string name="navigation">navigation</string>
    <string name="map_modeling">map modeling</string>
    <string name="cancel">cancel</string>
</resources>
