<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/camera_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera" />

            <RadioButton
                android:id="@+id/radio_camera2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/camera2" />
        </RadioGroup>

        <Switch
            android:id="@+id/get_config_from_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/get_config_from_server" />

        <EditText
            android:id="@+id/image_sizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_image_size"
            android:inputType="text"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_frequency"
            android:inputType="number"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/sensor_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_all_sensor_s_rate"
            android:inputType="number"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/backend_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_backend_s_url"
            android:inputType="textUri"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/begin" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/deepnavi_config_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
