<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation"
        app:layout_constraintBottom_toTopOf="@id/start_train"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        app:layout_constraintBottom_toTopOf="@id/start_map_modeling"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_navigation" />

    <Button
        android:id="@+id/start_map_modeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_modeling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_train" />
</androidx.constraintlayout.widget.ConstraintLayout>
